fixed overflow-x on facebook browser and possibly other mobile browsers + fixed enter animation on videos

--- a/src/sass/animations.scss
+++ b/src/sass/animations.scss
@@ -59,7 +59,7 @@
 }
 
 .scroll-anim {
-  &.video-wrapper {
+  &.video__wrapper {
     @include enter (slide-from-depth);
   }
   &.featured-snippet {
