--- a/src/sass/generic.scss
+++ b/src/sass/generic.scss
@@ -29,10 +29,12 @@ footer, header, hgroup, menu, nav, section {
 html, body {
     position: relative;
     width: 100%;
-    height: 100%;
     font-family: Roboto, sans-serif;
     font-size: 16px;
     text-align: center;
+    //overflow: hidden must be set on both html and body + position 
+    //relative on body for overflow to work properly on some browsers on mobile
+    overflow-x: hidden; 
     
     @include widthGreaterEqual (600px) {
         font-size: 3vh;
@@ -42,7 +44,6 @@ html, body {
 body {
 	line-height: 1;
     text-transform: uppercase;
-    overflow-x:hidden;
 }
 
 ol, ul {
