--- a/src/sass/masthead.scss
+++ b/src/sass/masthead.scss
@@ -4,7 +4,10 @@
 .masthead {
   position: relative;
   width: 100%;
-  height: 100%;
+  //setting overflow-x: hidden on html and body messes up window scrolling,
+  //removing height 100% from html and body fixes it, but then height 100% on children 
+  //has no reference to calculate 100% from; 100vh helps with that 
+  height: 100vh;
   color: white;
   text-align: center;
   cursor: default;
